re #716: Updated to handle datatype correctly and performance enhancements. * The frequency entries are now distinct by datatype * The filtering withing the metadata helper is now pushed down to interators and into the deserialization